Mejoras en la interfaz

--- a/GenioPolictenico/src/Recursos/Styles.css
+++ b/GenioPolictenico/src/Recursos/Styles.css
@@ -18,6 +18,7 @@ and open the template in the editor.
 #OpSi:hover{
     -fx-cursor: hand;
     -fx-text-fill: #12EB00;
+    -fx-font-family: "Arial";
 }
 
 #OpNo{
