--- a/GenioPolictenico/src/Recursos/Styles.css
+++ b/GenioPolictenico/src/Recursos/Styles.css
@@ -39,3 +39,20 @@ and open the template in the editor.
 .adivinoF{
     -fx-text-fill: #ee4540;
 }
+
+.myButton{
+    -fx-text-decoration: none;
+    -fx-padding: 7px;
+    -fx-font-weight: 600;
+    -fx-font-size: 18px;
+    -fx-text-fill: #ffffff;
+    -fx-background-color: #32afa9;
+    -fx-border-radius: 3px;
+    -fx-border-color: #32afa9;
+}
+
+.myButton:hover {
+    -fx-cursor: hand;
+    -fx-text-fill:#32afa9;
+    -fx-background-color:ffffff;
+}
